Refactor code to add endpoint for modifying Jail's Network settings
